Perf optimization (#62)
* fix missed transactions
* fix Docker base image 
* Fix missing metadata constraints
* Fix DNS hostnames, factory usage, null safety, and import namespace pollution (#63)